<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/regular_background"
    tools:context=".activities.LandingPageActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="109dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="314dp"
        android:layout_height="65dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="credit card"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="622dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="314dp"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="First Name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="303dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="314dp"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/text_last_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="367dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="313dp"
        android:layout_height="63dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hint_username"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="431dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="313dp"
        android:layout_height="64dp"
        android:contentDescription="@string/hint_password"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/hint_password"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="494dp"
        tools:text="@string/hint_password" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="316dp"
        android:layout_height="64dp"
        android:contentDescription="@string/hint_password"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/hint_password"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="558dp"
        tools:text="@string/hint_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register An Account"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>